samples/_failures_safe/1761428032_da6e8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c799e87.c: In function ‘main’:
./samples/SAFE/__tmp_8c799e87.c:157:17: error: expected expression at end of input
  157 |                 matrix_input(&matB,
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_8c799e87.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c799e87.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c799e87.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c799e87.c:157:17: error: expected declaration or statement at end of input
